corrected concepts for green card

--- a/omod/src/main/webapp/resources/htmlforms/clinicalEncounter.html
+++ b/omod/src/main/webapp/resources/htmlforms/clinicalEncounter.html
@@ -146,7 +146,7 @@
 			<table cellspacing="5">
 				<tr>
 					<th>Scheduled/Unscheduled</th>
-					<th>Visit by</th>
+					<th align="left">Visit by</th>
 				</tr>
 				<tr>
 
@@ -174,7 +174,7 @@
 				<tr>
 					<th></th>
 					<th></th>
-					<th>Recent</th>
+					<th align="left">Recent</th>
 				</tr>
 				<tr>
 					<td>Reason for visit</td>
@@ -194,8 +194,8 @@
 			<table cellspacing="5">
 				<tr>
 					<th></th>
-					<th>Current</th>
-					<th>Recent</th>
+					<th align="left">Current</th>
+					<th align="left">Recent</th>
 				</tr>
 				<tr>
 					<td>Temp</td>
@@ -233,8 +233,8 @@
 			<table cellspacing="10">
 				<tr>
 					<th> </th>
-					<th>Current</th>
-					<th>Recent</th>
+					<th align="left">Current</th>
+					<th align="left">Recent</th>
 				</tr>
 				<tr>
 					<td>Weight</td>
