--- a/omod/src/main/webapp/resources/htmlforms/labResults.html
+++ b/omod/src/main/webapp/resources/htmlforms/labResults.html
@@ -54,12 +54,12 @@
 	<div class="ke-form-content">
 		<table style="width: 80%">
 			<tr>
-				<th> </th>
-				<th>Test</th>
-				<th>Ordered</th>
-				<th>Date Ordered</th>
-				<th>Result</th>
-				<th>Date Collected (if not today)</th>
+				<th align="left">No. </th>
+				<th align="left">Test</th>
+				<th align="left">Ordered</th>
+				<th align="left">Date Ordered</th>
+				<th align="left">Result</th>
+				<th align="left">Date Collected (if not today)</th>
 			</tr>
 			<tr>
 				<td>01.</td>
