--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivClinicalEncounterAddendum.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivClinicalEncounterAddendum.html
@@ -67,11 +67,11 @@
 							</tr>
 							<repeat>
 								<template>
-									<obsgroup groupingConceptId="160647AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
+									<obsgroup groupingConceptId="121764AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
 										<tr>
 											<td><obs conceptId="160753AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" " /></td>
 											<td><obs conceptId="160644AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" " /></td>
-											<td><obs conceptId="160759AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  answerConceptIds="160754AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160755AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160756AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160757AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160758AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Mild,Moderate,Severe,Fatal,Unknown" /></td>
+											<td><obs conceptId="160759AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  answerConceptIds="160754AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160755AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160756AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160758AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Mild,Moderate,Severe,Fatal,Unknown" /></td>
 											<td><obs conceptId="160643AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="autocomplete" answerClasses="Drug" labelText=" "  /></td>
 											<td>
 												<obs conceptId="1255AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
@@ -153,7 +153,9 @@
 					<td>Physical examination*:</td>
 					<td>
 
-						<obs conceptId="162737AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="136443AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,460AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5334AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5245AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA," style="dropdown" answerLabels="Jaundice,Oedema,Thrush,Pallor"  /><br/>
+						<obs conceptId="162737AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+							 answerConceptIds="136443AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,460AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5334AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5245AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,"
+							 style="dropdown" answerLabels="Jaundice,Oedema,Thrush,Pallor"  /><br/>
 
 					</td>
 					<!-- .pw greencard additions physical examination findings -->
@@ -161,7 +163,7 @@
 			</table>
 		</fieldset>
 		<!-- pw greencard additions LAbs -->
-		<fieldset>
+		<!--<fieldset>
 			<legend>Laboratory* </legend>
 			<table>
 				<tr>
@@ -170,7 +172,7 @@
 						<obs conceptId="1271AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
 
 						Order reason:
-						<!-- missing question id -->
+						&lt;!&ndash; missing question id &ndash;&gt;
 						<obs conceptId="160288AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 							 answerConceptIds="162080AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160523AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,161256AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,151685AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 							 answerLabels="Baseline,Routine,Confirmatory,Suspected Drug Resistance,Other,"
@@ -187,10 +189,10 @@
 					<td>
 						<obs conceptId="159395AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="5" cols="75" /> </td>
 				</tr>
-				<!-- .pw greencard additions LAbs -->
-				<!-- .pw greencard additions Antigen today vaccination -->
+				&lt;!&ndash; .pw greencard additions LAbs &ndash;&gt;
+				&lt;!&ndash; .pw greencard additions Antigen today vaccination &ndash;&gt;
 			</table>
-		</fieldset>
+		</fieldset>-->
 		<fieldset>
 			<legend>Antigen today*</legend>
 			<table>
@@ -220,7 +222,7 @@
 		<!-- .pw greencard additions Antigen today vaccination -->
 
 		<fieldset>
-			<legend>Cotrimoxazole</legend>
+			<legend>Cotrimoxazole/Dapsone</legend>
 			<table>
 				<tr>
 					<td>
@@ -298,11 +300,10 @@
 							 answerLabels="Follow up,Lab tests,Counseling,Pharmacy Refill,Other,"
 							 style="dropdowm"  />
 						Differentiated Care*
-						<select>
-							<option value="Standard">Standard</option>
-							<option value="Express">Express</option>
-							<option value="Community dispensing">Community dispensing</option>
-						</select>
+						<obs conceptId="161625AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+							 answerConceptIds="163510AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159832AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1751AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+							 answerLabels="Standard,Express,Community Dispensing"
+							 style="dropdowm"  />
 					</td>
 
 				</tr>
