reorganized green card sections and further refinement

--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257VisitSummary.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257VisitSummary.html
@@ -25,6 +25,13 @@
             text-align: left;
             background-color: #F3F9FF;
         }
+        .left-table {
+            display: inline-block; border: 1px solid; float: left;
+        }
+
+        .right-table {
+            display: inline-block; border: 1px solid;
+        }
     </style>
 
     <script type="text/javascript">
