green card components

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -57,7 +57,7 @@ Green Card follow-up visit form
         jq(function () {
             getField('weight.value').change(onWeightOrHeightChange);
             getField('height.value').change(onWeightOrHeightChange);
-            onWeightOrHeightChange();
+           // onWeightOrHeightChange();
             displayRecentBmi();
 
             var strtext = "";
