--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -39,14 +39,8 @@ Green Card follow-up visit form
             jq('#calculated-bmi').html(display);
         }
         function displayRecentBmi() {
-            var weightKg = "<lookup expression="
-            fn.latestObs(5089).valueNumeric
-            "/>"
-            var heightM = ("<lookup expression="
-            fn.latestObs(5090).valueNumeric
-            "/>"
-        )/
-            100
+            var weightKg = "<lookup expression="fn.latestObs(5089).valueNumeric"/>"
+            var heightM = ("<lookup expression="fn.latestObs(5090).valueNumeric"/>")/100
             var bmi = '';
             if (!isNaN(weightKg) &amp;&amp; !isNaN(heightM)) {
                 bmi = weightKg / (heightM * heightM);
@@ -54,11 +48,11 @@ Green Card follow-up visit form
             jq('#recent-calculated-bmi').html(bmi.toFixed(2));
         }
 
-        jQuery(function($) {
+        jq(function() {
          getField('weight.value').change(onWeightOrHeightChange);
-          getField('height.value').change(onWeightOrHeightChange);
-           onWeightOrHeightChange();
-            displayRecentBmi();
+         getField('height.value').change(onWeightOrHeightChange);
+         onWeightOrHeightChange();
+         displayRecentBmi();
 
             var strtext = "";
             var familyPlanningOption = getValue('fplanning.value');
@@ -94,29 +88,29 @@ Green Card follow-up visit form
             jq("#fplanning select ").change(function () {
 
                 jq("#fplanning select option:selected").each(function () {
-                    strtext += $(this).val();
+                    strtext += jq(this).val();
                 });
 
                 if (strtext == "") {
-                    $('#notOnFp :input').prop('checked', false);
-                    $('#onFp :input').prop('checked', false);
-                    $('#onFp :input').prop('disabled', true);
-                    $('#notOnFp :input').prop('disabled', true);
+                    jq('#notOnFp :input').prop('checked', false);
+                    jq('#onFp :input').prop('checked', false);
+                    jq('#onFp :input').prop('disabled', true);
+                    jq('#notOnFp :input').prop('disabled', true);
                 }
                 if (strtext == "965") {
-                    $('#notOnFp :input').prop('checked', false);
-                    $('#onFp :input').prop('disabled', false);
-                    $('#notOnFp :input').prop('disabled', true);
+                    jq('#notOnFp :input').prop('checked', false);
+                    jq('#onFp :input').prop('disabled', false);
+                    jq('#notOnFp :input').prop('disabled', true);
                 }
                 if (strtext == "160652") {
-                    $('#onFp :input').prop('checked', false);
-                    $('#onFp :input').prop('disabled', true);
-                    $('#notOnFp :input').prop('disabled', false);
+                    jq('#onFp :input').prop('checked', false);
+                    jq('#onFp :input').prop('disabled', true);
+                    jq('#notOnFp :input').prop('disabled', false);
                 }
                 if (strtext == "1360") {
-                    $('#notOnFp :input').prop('checked', false);
-                    $('#onFp :input').prop('disabled', false);
-                    $('#notOnFp :input').prop('disabled', true);
+                    jq('#notOnFp :input').prop('checked', false);
+                    jq('#onFp :input').prop('disabled', false);
+                    jq('#notOnFp :input').prop('disabled', true);
                 }
 
                 strtext = "";
@@ -163,8 +157,8 @@ Green Card follow-up visit form
                 return true;
             });
 
-            var screeningRadios = $('#screening-questions').find('input[type=radio]');
-            var iptClientWorkupRadios = $('#ipt-client-workup').find('input[type=radio]');
+            var screeningRadios = jq('#screening-questions').find('input[type=radio]');
+            var iptClientWorkupRadios = jq('#ipt-client-workup').find('input[type=radio]');
 
             const YES_CONCEPT_ID = 1065;
             const NO_CONCEPT_ID = 1066
@@ -173,37 +167,38 @@ Green Card follow-up visit form
             //Only show 'IPT Client Workup' tab if all screening questions evaluate to NO
             //Only show 'Action Taken' tab if any of the screening questions evaluate to YES
             var showHideTabs = function() {
-                var actionTakenTab = $('#action-taken');
-                var iptClientWorkupTab = $('#ipt-client-workup');
+                var actionTakenTab = jq('#action-taken');
+                var iptClientWorkupTab = jq('#ipt-client-workup');
+                var iptFollowup = jq('#ipt-followup');
 
                 var showActionTakenTab = false;
                 var showIPTClientWorkupTab = false;
+                var showIPTFollowupTab = false;
 
                 var screeningYesResponses = [];
                 var screeningNoResponses = [];
 
                 //Fetch responses for the screening questions
-                $.each(screeningRadios, function(){
+                jq.each(screeningRadios, function(){
 
                     //Push any responses to the respective screeningYesResponses and screeningNoResponses array
                     if (this.value == YES_CONCEPT_ID &amp;&amp; this.checked == true) {
                         screeningYesResponses.push(this);
-
                     }
 
                     if (this.value == NO_CONCEPT_ID &amp;&amp; this.checked == true) {
                         screeningNoResponses.push(this);
-
                     }
 
                 });
 
-                //If no responses have been recorded than hide the ActionTaken and IPTClientWorkup tabs
+                //If no responses have been recorded then hide the ActionTaken and IPTClientWorkup tabs
                 if (screeningYesResponses.length == 0 &amp;&amp; screeningNoResponses.length == 0 ) {
                 } else {
 
                     if (screeningYesResponses.length &gt; 0) {
                         showActionTakenTab = true;
+                        showIPTFollowupTab = true;
 
                     } else {
 
@@ -218,9 +213,11 @@ Green Card follow-up visit form
 
                 if (showActionTakenTab) {
                     actionTakenTab.show();
+                    iptFollowup.show();
 
                 } else {
                     actionTakenTab.hide();
+                    iptFollowup.hide();
                     clearRadios(actionTakenTab);
 
                 }
@@ -238,14 +235,14 @@ Green Card follow-up visit form
 
             var showHideIPTInitiationTab = function() {
 
-                var iptInitiationTab = $('#ipt-initiation');
+                var iptInitiationTab = jq('#ipt-initiation');
                 var showIPTInitiationTab = false;
 
                 var iptClientWorkupYesResponses = [];
                 var iptClientWorkupNoResponses = [];
 
                 //Fetch responses for the IPT client workup questions
-                $.each(iptClientWorkupRadios, function() {
+                jq.each(iptClientWorkupRadios, function() {
 
                     //Push any responses to the respective iptClientWorkupYesResponses and iptClientWorkupNoResponses array
                     if (this.value == YES_CONCEPT_ID &amp;&amp; this.checked == true) {
@@ -657,6 +654,121 @@ Green Card follow-up visit form
                         <td><obs conceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText="TB Rx:"/></td>
                     </tr>
                 </table>
+            </fieldset>
+            <fieldset id="ipt-followup">
+                <legend>IPT Followup</legend>
+
+                <table>
+                    <tr>
+                        <td>IPT Due Date</td>
+                        <td><obs conceptId="164073" /></td>
+                    </tr>
+                    <tr>
+                        <td>Date collected IPT</td>
+                        <td><obs conceptId="164074" /></td>
+                    </tr>
+                    <tr>
+                        <td>Weight</td>
+                        <td><recentObs conceptId="5089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
+                    </tr>
+                    <tr>
+                        <td>Hepatotoxity?  &lt;/br&gt; (Vomiting, persistent irritability, sbdominal pain, RUQ pain, yellow urine or eyes)</td>
+                        <td><obs conceptId="159098AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio"/></td>
+                    </tr>
+                    <tr>
+                        <td>Peripheral Neuropathy  &lt;/br&gt; Does client have any of the following in the limbs? Numbness, tingling or burning sensation</td>
+                        <td><obs conceptId="118983AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio"/></td>
+                    </tr>
+                    <tr>
+                        <td>Does the patient have Rash?	</td>
+                        <td><obs conceptId="512AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio"/></td>
+                    </tr>
+                    <tr>
+                        <td>Adherence Measurement &lt;/br&gt;Good= missed &lt;3 doses/month Fair=missed 4-8 doses/month Bad= missed 9 doses/month</td>
+                        <td><obs conceptId="164075AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="159405AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159406AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159407AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio"/></td>
+                    </tr>
+                    <tr>
+                        <td>Action Taken</td>
+                        <td><obs id="action-taken" conceptId="160632" cols="30" rows="6" /></td>
+                    </tr>
+                </table>
+            </fieldset>
+
+            <fieldset>
+                <legend>History</legend>
+
+                <table>
+                    <tr>
+                        <th>IPT Due Date</th>
+                        <th>Date collected IPT</th>
+                        <th>Weight(Kg)</th>
+                        <th>Hepatotoxicity</th>
+                        <th>Peripheral Neuropathy</th>
+                        <th>Rash?</th>
+                        <th>Adherence Measurement</th>
+                    </tr>
+                    <lookup complexExpression="
+			#foreach($encounter in $fn.allEncounters('aadeafbe-a3b1-4c57-bc76-8461b778ebd6'))
+				&lt;tr&gt;
+				#set($iptDueDate='')
+				#set($iptCollectionDate='')
+				#set($weight='')
+				#set($hepatotoxicity='')
+				#set($peripheralneuropathy='')
+				#set($rash='')
+				#set($adherenceMeasurement='')
+
+				#foreach($obs in $encounter.obs)
+
+						#if ( $obs.concept==164073 )
+							#set($iptDueDate=($obs.getValueAsString(en)))
+						#end
+						#if ( $obs.concept==164074 )
+							#set($iptCollectionDate=$obs.getValueAsString(en))
+						#end
+						#if ( $obs.concept==5089 )
+							#set($weight=$obs.valueNumeric)
+						#end
+						#if ( $obs.concept==159098 )
+							#set($hepatotoxicity=$obs.valueCoded.name)
+						#end
+						#if ( $obs.concept==118983 )
+							#set($peripheralneuropathy=$obs.valueCoded.name)
+						#end
+						#if ( $obs.concept==512 )
+							#set($rash=$obs.valueCoded.name)
+						#end
+						#if ( $obs.concept==164075 )
+							#set($adherenceMeasurement=$obs.valueCoded.name)
+						#end
+
+				#end
+
+				&lt;td&gt;
+					$iptDueDate
+				&lt;/td&gt;
+				&lt;td&gt;
+					$iptCollectionDate
+				&lt;/td&gt;
+				&lt;td&gt;
+					$weight
+				&lt;/td&gt;
+				&lt;td&gt;
+					$hepatotoxicity
+				&lt;/td&gt;
+				&lt;td&gt;
+					$peripheralneuropathy
+				&lt;/td&gt;
+				&lt;td&gt;
+					$rash
+				&lt;/td&gt;
+				&lt;td&gt;
+					$adherenceMeasurement
+				&lt;/td&gt;
+				&lt;/tr&gt;
+			#end"/>
+                </table>
+
             </fieldset>
 
             <!--Adverse Drug Reactions-->
@@ -1201,3 +1313,4 @@ Green Card follow-up visit form
     </div>
 
 </htmlform>
+
