--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -15,7 +15,6 @@
 Green Card follow-up visit form
 -->
 <htmlform>
-
     <style type="text/css">
         table.right-aligned-first td:first-child {
             text-align: right;
@@ -53,7 +52,42 @@ Green Card follow-up visit form
          getField('height.value').change(onWeightOrHeightChange);
          onWeightOrHeightChange();
          displayRecentBmi();
+         jq('input[type=radio].on-ipt').prop("disabled", true);
+         jq('input[type=radio].on-ipt').prop("checked", false);
+         jq('input[type=radio].on-anti-tb-drugs').prop("checked", false);
+         jq("#tb-screening-result").hide();
+         jq('#pregnancyOptionValues').hide();
+         jq('#fp-details').hide();
+         jq('input[type=radio].on-anti-tb-drugs').change(function(){
+             var val = jq(this).val();
+             var actionTakenTab = jq('#action-taken');
+             var iptClientWorkupTab = jq('#ipt-client-workup');
+             var iptFollowup = jq('#ipt-followup');
+             var tbScreeningQuestionsTab = jq("#tb-screening-tab");
+             if(val == 1066) {
+                 jq('input[type=radio].on-ipt').prop("disabled", false);
+             } else {
+                 jq('input[type=radio].on-ipt').prop("disabled", true);
+                 jq('input[type=radio].on-ipt').prop("checked", false);
+                 jq("#tb-screening-result").hide();
+                 jq("#tb-screening-tab").hide();
+                 actionTakenTab.hide();
+                 clearRadios(actionTakenTab);
+                 iptClientWorkupTab.hide()
+                 clearRadios(iptClientWorkupTab);
+                 iptFollowup.hide();
+                 clearRadios(iptFollowup);
+                 tbScreeningQuestionsTab.hide();
+                 clearRadios(tbScreeningQuestionsTab);
 
+             }
+         });
+
+            jq('input[type=radio].on-ipt').change(function(){
+               jq("#tb-screening-tab").show();
+                jq("#tb-screening-result").show();
+            });
+            jq("#tb-screening-tab").hide();
             pAge = parseInt('<lookup expression="patient.age"/>');
             if (pAge &gt; 15) {
                 whoChild.style.display='none';
@@ -84,13 +118,15 @@ Green Card follow-up visit form
             }
             jq('#pregnancyOption input:radio').change(function () {
                 if ((getValue('pregnancyOption.value')) == 1066) {
-                    jq('#pregnancyOptionValues :input').prop('disabled', true);
+                    //jq('#pregnancyOptionValues :input').prop('disabled', true);
+                    jq('#pregnancyOptionValues').hide();
                     jq('#fp-details').show();
                     jq('#fpOptionValues :input').prop('disabled', false);
                     jq('#fpOptionValues :input').prop('checked', false);
                 }
                 else if((getValue('pregnancyOption.value')) == 1065){
                     jq('#pregnancyOptionValues :input').prop('disabled', false);
+                    jq('#pregnancyOptionValues').show();
                     jq('#fp-details').hide();
                     //jq('#fpOptionValues :input').prop('checked', false);
                 }
@@ -177,6 +213,7 @@ Green Card follow-up visit form
                 var actionTakenTab = jq('#action-taken');
                 var iptClientWorkupTab = jq('#ipt-client-workup');
                 var iptFollowup = jq('#ipt-followup');
+                var tbScreeningQuestionsTab = jq("#tb-screening-tab");
 
                 var showActionTakenTab = false;
                 var showIPTClientWorkupTab = false;
@@ -543,7 +580,15 @@ Green Card follow-up visit form
             <!--TB Screening-->
             <fieldset>
                 <legend>TB Screening</legend>
-                <fieldset>
+                <div>
+                   Patient on anti-TB Drugs? <input type="radio" name="on-anti-tb-drugs" class="on-anti-tb-drugs" value="1065"/> Yes
+                    <input type="radio" class="on-anti-tb-drugs" name="on-anti-tb-drugs" value="1066"/> No
+                </div>
+                <div>
+                    Patient on IPT? <input type="radio" name="on-ipt" class="on-ipt" value="1065"/> Yes
+                    <input type="radio" name="on-ipt" class="on-ipt" value="1066"/> No
+                </div>
+                <fieldset id="tb-screening-tab">
                     <legend>Screening Questions</legend>
                     <table id="screening-questions">
                         <tr>
@@ -670,7 +715,7 @@ Green Card follow-up visit form
 
                 <div id="ipt-initiation" style="width: 100%; float: left; overflow: auto; text-align: left; padding: 5px"><span class="ke-flagtag">Candidate for IPT Initiation</span></div>
 
-                <table>
+                <table id="tb-screening-result">
                     <tr>
                         <td colspan="2"><p> </p></td>
                     </tr>
@@ -722,7 +767,7 @@ Green Card follow-up visit form
                     </tr>
                     <tr>
                         <td>Action Taken</td>
-                        <td><obs id="action-taken" conceptId="160632" cols="30" rows="6" /></td>
+                        <td><obs id="action-taken" conceptId="160632" cols="45" rows="1" /></td>
                     </tr>
                 </table>
             </fieldset>
@@ -812,11 +857,11 @@ Green Card follow-up visit form
                         <td colspan="2">Record any Adverse Drug Reactions since the last visit<br/>
                             <table>
                                 <tr>
-                                    <td>Causative agent</td>
-                                    <td>Reaction</td>
-                                    <td>Severity</td>
-                                    <td>Date of Onset</td>
-                                    <td>Action taken</td>  <!-- pw.Greencard additions action taken missing question id -->
+                                    <th>Causative agent</th>
+                                    <th>Reaction</th>
+                                    <th>Severity</th>
+                                    <th>Date of Onset</th>
+                                    <th>Action taken</th>  <!-- pw.Greencard additions action taken missing question id -->
                                 </tr>
                                 <repeat>
                                     <template>
@@ -857,43 +902,42 @@ Green Card follow-up visit form
             </fieldset>
             <fieldset>
                 <legend>Antigen Today</legend>
-                <table>
+                <table width="30%">
                     <tr>
-                        <th style="color: #888">Vaccine</th>
-                        <th style="color: #888">Vaccine Stage</th>
-                        <th style="color: #888; text-align: center">Vaccination Date</th>
-                    </tr>
-                    <repeat>
-                        <template>
-                            <obsgroup groupingConceptId="164464AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
-                                <tr>
+                        <th style="color: #888" align="left">Antigen</th>
+                        <th style="color: #888" align="left">Recent</th>
+                        <th style="color: #888" align="left">Count</th>
+                      </tr>
 
-                        <td>
-
-                            <obs conceptId="1198AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                                 answerConceptIds="36AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,783AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,886AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1423AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,82215AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162342AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                                 style="dropdown"
-                                 answerLabels="Measles,Polio,BCG,Penta,PV,PCV" />
-                        </td><td>
-                            <select>
-                                <option value="Select">Select</option>
-                                <option value="Stage1">Stage1</option>
-                                <option value="Stage2">Stage2</option>
-                                <option value="Stage3">Stage3</option>
-                                <option value="Stage4">Stage4</option>
-                            </select>
-                                </td><td>
-                            <obs id="vaccination-date" conceptId="1410AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" />
-                        </td>
+                    <tr>
+                        <td><obs conceptId="1198AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="886AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="BCG" style="checkbox" /></td>
+                        <td> <lookup expression="fn.latestObs(1198).valueCoded().equals(886).obsDateTime"/> </td>
+                        <td> <lookup expression="fn.allObs(1198).valueCoded().equals(886).size()"/> </td>
                     </tr>
-                            </obsgroup>
-                        </template>
-                        <render n="1" concept="Vaccine"/>
-                        <render n="2" concept="Vaccine"/>
-                        <render n="3" concept="Vaccine"/>
-                        <render n="4" concept="Vaccine"/>
-                        <render n="5" concept="Vaccine"/>
-                    </repeat>
+                    <tr>
+                        <td><obs conceptId="1198AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="82215AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="PV" style="checkbox" /></td>
+                        <td> <lookup expression="fn.latestObs(1198).valueCoded().equals(82215).obsDateTime"/> </td>
+                        <td> <lookup expression="fn.allObs(1198).valueCoded().equals(82215).size()"/> </td>
+                    </tr>
+                    <tr>
+                        <td><obs conceptId="1198AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="1423AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Penta" style="checkbox" /></td>
+                        <td> <lookup expression="fn.latestObs(1198).valueCoded().equals(1423).obsDateTime"/> </td>
+                        <td> <lookup expression="fn.allObs(1198).valueCoded().equals(1423).size()"/> </td>
+                    </tr>
+                    <tr>
+                        <td><obs conceptId="1198AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="162342AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="PCV" style="checkbox" /></td>
+                        <td> <lookup expression="fn.latestObs(1198).valueCoded().equals(162342).obsDateTime"/> </td>
+                        <td> <lookup expression="fn.allObs(1198).valueCoded().equals(162342).size()"/> </td>
+                    </tr>
+                    <tr>
+                        <td><obs conceptId="1198AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="36AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Measles" style="checkbox" /></td>
+                        <td> <lookup expression="fn.latestObs(1198).valueCoded().equals(36).obsDateTime"/> </td>
+                        <td> <lookup expression="fn.allObs(1198).valueCoded().equals(36).size()"/> </td>
+                    </tr>
+
+
+
+
                 </table>
             </fieldset>
 
@@ -988,10 +1032,6 @@ Green Card follow-up visit form
                                          allowFutureDates="true" labelText=" "/>
                                 </td>
                             </tr>
-                          <includeIf velocityTest="$patient.gender == 'F' ">
-                                ANC/PNC Profile
-                                <obs id="pwp-disclosure" conceptId="159423AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" style="radio" /> <br></br><br></br>
-                            </includeIf>
                             <tr>
                                 <td style="text-align: left">Gravida:</td>
                                 <td>
@@ -1000,14 +1040,16 @@ Green Card follow-up visit form
                                 <td></td>
                             </tr>
                             <tr>
-                                <td style="text-align: left">Parity:</td>
-                                <td>
-                                    <obs conceptId="1053AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" "/>
-                                </td>
-                                <td></td>
-                            </tr>
+                                <includeIf velocityTest="$patient.gender == 'F' ">
+                                    <td style="text-align: left">ANC/PNC Profile</td>
+                                    <td>
+                                        <obs conceptId="159423AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" style="radio" />
+                                    </td>
+                                </includeIf>
 
-                        </table>
+                            </tr>
+                            </table>
+
                         <table>
 
                             <tr>
